--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-ideas-app",
   "version": "0.0.1",
-  "description": "App criado para aprendizado do nestjs. Utilizei o tutorial do outube chamado Ideals App. Link: https://youtu.be/NF9Xn4g5MJY ",
+  "description": "App criado para aprendizado do nestjs. Utilizei o tutorial do outube chamado Ideas App. Link: https://youtu.be/NF9Xn4g5MJY ",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
