--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,8 +3,8 @@
     "host": "127.0.0.1",
     "port": "5432",
     "username": "postgres",
-    "password": "idealsapp",
-    "database": "ideals",
+    "password": "ideasapp",
+    "database": "ideas",
     "synchronize": true,
     "logging": true,
     "entities": [
