feat(junction-tables): IDEALS-9 Criar junção de tabelas de usuário e idéias para dar positivo ou negativo para as ideias.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres
     restart: always
     volumes:
-      - /ideasapp2/data:/var/lib/postgresql/data
+      - /ideasapp/data:/var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
